# chezmoi-ui

./: .npmrc  README.md  conductor.json  package.json  pnpm-lock.yaml
.conductor/: settings.toml
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chezmoi.rs  lib.rs  main.rs
src/components/: DataView.tsx  DoctorView.tsx  GitView.tsx  ManagedView.tsx  StatusView.tsx
src/hooks/: useChezmoi.ts
