[package]
name = "chezmoi-ui"
version = "0.0.2"
description = "GUI for chezmoi dotfiles manager"
authors = []
edition = "2021"

[lib]
name = "chezmoi_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
